# DockerForLibtorch

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
include/: model.h
src/: main.cpp
